ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Org_City__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Org_City__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Organization__r.BillingCity )), Grantee_Organization__r.BillingCity  &amp; &quot; , &quot; , &quot;&quot;) &amp; 
Grantee_Organization__r.BillingState&amp; &quot; &quot; &amp; Grantee_Organization__r.BillingPostalCode )</formula>
    <label>Grantee Org City</label>
    <type>Text</type>
</CustomField>