ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Org_Country__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Org_Country__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Organization__r.BillingCountry)),Grantee_Organization__r.BillingCountry , &quot;&quot;))</formula>
    <label>Grantee Org Country</label>
    <type>Text</type>
</CustomField>