ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grantee_Organization__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grantees</relationshipLabel>
    <relationshipName>Grantees</relationshipName>
    <type>Lookup</type>
</CustomField>