ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/GrantFiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>GrantFiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY19</fullName>
            </value>
            <value>
                <fullName>FY2020</fullName>
                <default>true</default>
                <label>FY2020</label>
            </value>
            <value>
                <fullName>FY12</fullName>
            </value>
            <value>
                <fullName>FY13</fullName>
            </value>
            <value>
                <fullName>FY14</fullName>
            </value>
            <value>
                <fullName>FY15</fullName>
            </value>
            <value>
                <fullName>FY16</fullName>
            </value>
            <value>
                <fullName>FY17</fullName>
            </value>
            <value>
                <fullName>FY18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>