ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Grants_Night__c.field-meta.xml
<CustomField>
    <fullName>Grants_Night__c</fullName>
    <formula>Text(Funding_Campaign__r.Grants_Night_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grants Night</label>
    <type>Text</type>
</CustomField>