ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Has_Timely_Important_Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Has_Timely_Important_Funding_Opportunity__c</fullName>
    <inlineHelpText>Sum of Has Timely/Important Funding Opportunity Scores</inlineHelpText>
    <label>Has Timely/Important Funding Opportunity</label>
    <summarizedField>Docket_Review__c.Has_Timely_Important_Funding_Opportunity__c</summarizedField>
    <summaryForeignKey>Docket_Review__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>