ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Hidden_EIN__c.field-meta.xml
<CustomField>
    <fullName>Hidden_EIN__c</fullName>
    <label>Hidden EIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>