ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Impactful_Org_with_Strong_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Impactful_Org_with_Strong_Strategy__c</fullName>
    <inlineHelpText>Sum of Impactful Org with Strong Strategy Scores</inlineHelpText>
    <label>Impactful Org with Strong Strategy</label>
    <summarizedField>Docket_Review__c.mpactful_Org_with_Strong_Strategy__c</summarizedField>
    <summaryForeignKey>Docket_Review__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>