ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Is_there_a_Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Secondary_Contact__c</fullName>
    <formula>if( ISBLANK(Grantee_Contact_2__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is there a Secondary Contact?</label>
    <type>Checkbox</type>
</CustomField>