ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Major_Changes_Had_Will_Impact_Work__c.field-meta.xml
<CustomField>
    <fullName>Major_Changes_Had_Will_Impact_Work__c</fullName>
    <description>Describe any major changes that occurred during the past year within your organization or outside of the organization that had or will impact the work supported by the grant.</description>
    <label>Major Changes Had/Will Impact Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>