ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <type>TextArea</type>
</CustomField>