ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Narrative_of_Activities_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Narrative_of_Activities_Conducted__c</fullName>
    <description>Provides a narrative description of the activities conducted this year.</description>
    <label>Narrative of Activities Conducted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>