ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/No_Reporting_Requirements__c.field-meta.xml
<CustomField>
    <fullName>No_Reporting_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Reporting Requirements</label>
    <type>Checkbox</type>
</CustomField>