ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Notes_from_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Pitch__c</fullName>
    <label>Notes from Pitch</label>
    <length>120768</length>
    <type>LongTextArea</type>
</CustomField>