ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Number_of_People_Served_Annually__c.field-meta.xml
<CustomField>
    <fullName>Number_of_People_Served_Annually__c</fullName>
    <label>Number of People Served Annually</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>