ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Numbers_Served_Notes__c.field-meta.xml
<CustomField>
    <fullName>Numbers_Served_Notes__c</fullName>
    <label>Numbers Served Notes</label>
    <type>TextArea</type>
</CustomField>