ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>Funding_Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>