ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Organization_Aligns_with_GC_Goals__c.field-meta.xml
<CustomField>
    <fullName>Organization_Aligns_with_GC_Goals__c</fullName>
    <inlineHelpText>Sum of Organization Aligns with GC Goals Scores</inlineHelpText>
    <label>Organization Aligns with GC Goals</label>
    <summarizedField>Docket_Review__c.Organization_Aligns_with_GC_Goals__c</summarizedField>
    <summaryForeignKey>Docket_Review__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>