ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Organization_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Organization_Billing_City__c</fullName>
    <formula>TRIM( IF( NOT( ISBLANK(Grantee_Organization__r.BillingCity )), Grantee_Organization__r.BillingCity  &amp; &quot;,&quot; , &quot;&quot;) &amp; &quot; &quot; &amp; Grantee_Organization__r.BillingState &amp; &quot; &quot; &amp;  Grantee_Organization__r.BillingPostalCode)</formula>
    <label>Organization Billing City</label>
    <type>Text</type>
</CustomField>