ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Organization_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Organization_Billing_Country__c</fullName>
    <formula>Grantee_Organization__r.BillingCountry</formula>
    <label>Organization Billing Country</label>
    <type>Text</type>
</CustomField>