ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Organization_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Organization_Billing_Street__c</fullName>
    <formula>Grantee_Organization__r.BillingStreet</formula>
    <label>Organization Billing Street</label>
    <type>Text</type>
</CustomField>