ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <formula>Grantee_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>