ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Partnered_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Partnered_Organizations__c</fullName>
    <label>Partnered Organizations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>