ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Partnership_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Opportunity__c</fullName>
    <label>Partnership Opportunity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>