ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Percentage_Latinos_Served__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Latinos_Served__c</fullName>
    <label>Percentage Latinos Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>