ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF( Grantee_Contact_1__r.Phone &lt;&gt; null,

&apos;(&apos;&amp; MID(
(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  (Grantee_Contact_1__r.Phone) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,1, 3) &amp;&apos;) &apos;&amp; MID(
(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  (Grantee_Contact_1__r.Phone) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,4,3)&amp;&apos;-&apos;&amp; MID( (
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  (Grantee_Contact_1__r.Phone) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,7,4)
, &quot;&quot;)</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>