ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Population_Served_Notes__c.field-meta.xml
<CustomField>
    <fullName>Population_Served_Notes__c</fullName>
    <label>Population Served Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>