ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Previous_Impact__c.field-meta.xml
<CustomField>
    <fullName>Previous_Impact__c</fullName>
    <label>Previous Impact</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>