ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Grantee_Contact_1__r.FirstName &amp; &quot; &quot; &amp;  Grantee_Contact_1__r.LastName</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>