ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Primary_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Area__c</fullName>
    <label>Primary Service Area</label>
    <type>TextArea</type>
</CustomField>