ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Program_Designation__c.field-meta.xml
<CustomField>
    <fullName>Program_Designation__c</fullName>
    <label>Program Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Latino Giving Circle Network</fullName>
            </value>
            <value>
                <fullName>Latino Nonprofit Accelerator</fullName>
            </value>
            <value>
                <fullName>California Latino Agenda</fullName>
            </value>
            <value>
                <fullName>Healthy Communities</fullName>
            </value>
            <value>
                <fullName>Children &amp; Youth</fullName>
            </value>
            <value>
                <fullName>Civic Engagement</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Fund-a-Need</fullName>
            </value>
            <value>
                <fullName>Arabella Martinez and David B. Carlson Fund</fullName>
            </value>
            <value>
                <fullName>Oportun Corporate Advised Fund</fullName>
            </value>
            <value>
                <fullName>NorCal Wildfire Relief Fund</fullName>
            </value>
            <value>
                <fullName>Mexico Earthquake Relief Fund</fullName>
            </value>
            <value>
                <fullName>Puerto Rico Hurricane Relief Fund</fullName>
            </value>
            <value>
                <fullName>SoCal Wildfire &amp; Mudslide Relief Fund</fullName>
            </value>
            <value>
                <fullName>Nuestro Futuro Fund</fullName>
            </value>
            <value>
                <fullName>Roots of Latino Power Initiative</fullName>
            </value>
            <value>
                <fullName>2020 Census</fullName>
            </value>
            <value>
                <fullName>Mobilize the Latino Vote</fullName>
            </value>
            <value>
                <fullName>Advocacy Trust Fund</fullName>
            </value>
            <value>
                <fullName>Economic Mobility</fullName>
            </value>
            <value>
                <fullName>Love Not Fear Fund</fullName>
            </value>
            <value>
                <fullName>Latino Entrepreneurship Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>