ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <label>Progress Notes</label>
    <type>TextArea</type>
</CustomField>