ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose of grant</description>
    <label>Purpose</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>