ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <description>Reasons for recommendation from LCF staff.</description>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>