ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Relationship_to_LCGN__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_LCGN__c</fullName>
    <label>Relationship to LCGN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>