ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Reporting_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Requirement__c</fullName>
    <description>Reporting Requirement</description>
    <label>Reporting Requirement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>