ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Rooted_in_Latino_Community_and_Culture__c.field-meta.xml
<CustomField>
    <fullName>Rooted_in_Latino_Community_and_Culture__c</fullName>
    <inlineHelpText>Sum of Rooted in Latino Community and Culture Scores</inlineHelpText>
    <label>Rooted in Latino Community and Culture</label>
    <summarizedField>Docket_Review__c.Rooted_in_Latino_Community_and_Culture__c</summarizedField>
    <summaryForeignKey>Docket_Review__c.Grant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>