ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <formula>Grantee_Contact_2__r.FirstName &amp; &quot; &quot; &amp;  Grantee_Contact_2__r.LastName</formula>
    <label>Secondary Contact</label>
    <type>Text</type>
</CustomField>