ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Email__c</fullName>
    <formula>Grantee_Contact_2__r.Email</formula>
    <label>Secondary Contact Email</label>
    <type>Text</type>
</CustomField>