ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone__c</fullName>
    <formula>IF( Grantee_Contact_2__r.Phone  &lt;&gt; null,

&apos;(&apos;&amp; MID(
(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  ( Grantee_Contact_2__r.Phone ) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,1, 3) &amp;&apos;) &apos;&amp; MID(
(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  ( Grantee_Contact_2__r.Phone ) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,4,3)&amp;&apos;-&apos;&amp; MID( (
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  ( Grantee_Contact_2__r.Phone ) , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;)) ,7,4)
, &quot;&quot;)</formula>
    <label>Secondary Contact Phone</label>
    <type>Text</type>
</CustomField>