ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Secondary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Title__c</fullName>
    <formula>Grantee_Contact_2__r.Title</formula>
    <label>Secondary Contact Title</label>
    <type>Text</type>
</CustomField>