ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Sent_Final_Template__c.field-meta.xml
<CustomField>
    <fullName>Sent_Final_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Final Template</label>
    <type>Checkbox</type>
</CustomField>