ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nominee</fullName>
            </value>
            <value>
                <fullName>Nomination Declined</fullName>
            </value>
            <value>
                <fullName>Invited to Apply</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Failed to Apply</fullName>
            </value>
            <value>
                <fullName>Withdrew Application</fullName>
            </value>
            <value>
                <fullName>Docket Review</fullName>
            </value>
            <value>
                <fullName>Invited to Present</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>VP Approval</fullName>
            </value>
            <value>
                <fullName>CEO Approval</fullName>
            </value>
            <value>
                <fullName>Ready for GAL</fullName>
            </value>
            <value>
                <fullName>GAL Processing</fullName>
            </value>
            <value>
                <fullName>GAL Submitted</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
                <isActive>false</isActive>
                <label>Awarded</label>
            </value>
            <value>
                <fullName>Invited</fullName>
                <isActive>false</isActive>
                <label>Invited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>