ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Story_2__c.field-meta.xml
<CustomField>
    <fullName>Story_2__c</fullName>
    <label>Quotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>