ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <label>Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>