ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>501(c)3</fullName>
            </value>
            <value>
                <fullName>Fiscally Sponsored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>