ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/The_population_we_serve_is_at_least_51__c.field-meta.xml
<CustomField>
    <fullName>The_population_we_serve_is_at_least_51__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Least 51% Latino population served</label>
    <type>Checkbox</type>
</CustomField>