ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Grantee_Contact_1__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>