ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Top_Five_Funders__c.field-meta.xml
<CustomField>
    <fullName>Top_Five_Funders__c</fullName>
    <label>Top Five Funders</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>