ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>Organization_Aligns_with_GC_Goals__c + Has_Timely_Important_Funding_Opportunity__c + Impactful_Org_with_Strong_Strategy__c + Rooted_in_Latino_Community_and_Culture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all review scores</inlineHelpText>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>