ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Update_Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Report_Due_Date__c</fullName>
    <description>Update Report Due Date</description>
    <label>Update Report Due Date</label>
    <type>Date</type>
</CustomField>