ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Update_Report_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Update_Report_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Report Submitted</label>
    <type>Checkbox</type>
</CustomField>