ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/Values_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Values_Alignment__c</fullName>
    <label>Values Alignment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>