ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/fields/VP_s_Director_s_Approval_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>VP_s_Director_s_Approval_Decline_Reason__c</fullName>
    <label>VP&apos;s/Director&apos;s Approval/Decline Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>