ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/validationRules/Giving_Circle_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Giving_Circle_Validation</fullName>
    <active>true</active>
    <description>When Program Designation is LGCN then Giving Circle is required</description>
    <errorConditionFormula>AND( ISPICKVAL( Program_Designation__c , &quot;Latino Giving Circle Network&quot;), ISPICKVAL(Giving_Circle__c ,&quot;&quot; ) )</errorConditionFormula>
    <errorDisplayField>Giving_Circle__c</errorDisplayField>
    <errorMessage>Please Enter the Giving Circle</errorMessage>
</ValidationRule>