ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Grantees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grantee_Organization__c</columns>
    <columns>Grant_Amount__c</columns>
    <columns>Program_Designation__c</columns>
    <columns>Purpose__c</columns>
    <columns>Stage__c</columns>
    <columns>Giving_Circle__c</columns>
    <columns>Final_Report_Due_old__c</columns>
    <columns>Grant_Start_Date__c</columns>
    <columns>Grant_Issue_Area__c</columns>
    <columns>Grant_Type__c</columns>
    <columns>County_Service_Area__c</columns>
    <columns>Current_Annual_Budget__c</columns>
    <columns>Number_of_People_Served_Annually__c</columns>
    <columns>Percentage_Latinos_Served__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GrantFiscal_Year__c</field>
        <operation>equals</operation>
        <value>FY2020</value>
    </filters>
    <label>All</label>
</ListView>